--- a/app/src/main/res/layout/list_item_sinhvien.xml
+++ b/app/src/main/res/layout/list_item_sinhvien.xml
@@ -21,7 +21,7 @@
 
 
             android:gravity="center_horizontal"
-            android:src="@drawable/avt2" />
+            android:src="@drawable/icon4" />
 
         <LinearLayout
             android:layout_width="wrap_content"
