--- a/app/src/main/res/layout/nhapthongtinsv.xml
+++ b/app/src/main/res/layout/nhapthongtinsv.xml
@@ -21,14 +21,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView3">
 
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:layout_gravity="center_horizontal"
-
-                android:layout_margin="10dp"
-                android:src="@drawable/avt2" />
+            <TextView
+                android:id="@+id/textView21"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="THÊM SINH VIÊN"
+                android:textAlignment="center"
+                android:textSize="24dp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
