--- a/app/src/main/res/layout/activity_bang_diem.xml
+++ b/app/src/main/res/layout/activity_bang_diem.xml
@@ -74,6 +74,59 @@
         android:layout_marginEnd="16dp"
         android:text="Lọc" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="16dp">
+
+        <TextView
+            android:id="@+id/text_view_masv"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:paddingRight="15dp"
+            android:text="Mã SV"
+            android:textAlignment="center"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/text_view_mamonhoc"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:paddingRight="15dp"
+            android:text="Mã Môn Học"
+            android:textAlignment="center"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/text_view_lanthi"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:paddingRight="15dp"
+            android:text="Lần Thi"
+            android:textAlignment="center"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/text_view_hocky"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:paddingRight="15dp"
+            android:text="Học Kỳ"
+            android:textAlignment="center"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/text_view_diem"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:paddingRight="15dp"
+            android:text="Điểm"
+            android:textAlignment="center"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
     <ListView
         android:id="@+id/list_view_bang_diem"
         android:layout_width="match_parent"
