--- a/app/src/main/res/layout/item_bang_diem.xml
+++ b/app/src/main/res/layout/item_bang_diem.xml
@@ -7,42 +7,47 @@
 
     <TextView
         android:id="@+id/text_view_masv"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:paddingRight="15dp"
         android:text="Mã SV: "
+        android:textAlignment="center"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/text_view_mamonhoc"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:paddingRight="15dp"
         android:text="Mã Môn Học: "
+        android:textAlignment="center"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/text_view_lanthi"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:paddingRight="15dp"
         android:text="Lần Thi: "
+        android:textAlignment="center"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/text_view_hocky"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:paddingRight="15dp"
         android:text="Học Kỳ: "
+        android:textAlignment="center"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/text_view_diem"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:paddingRight="15dp"
         android:text="Điểm: "
+        android:textAlignment="center"
         android:textStyle="bold" />
 
 </LinearLayout>
