[HOÀN THÀNH] Tính năng "Avatar sinh vien theo gioi tính" và "trỏ các nút đến chức năng cho MainActivity"

--- a/app/src/main/res/layout/activity_chinh_sua_diem.xml
+++ b/app/src/main/res/layout/activity_chinh_sua_diem.xml
@@ -14,7 +14,7 @@
         android:id="@+id/textViewTitle3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="CHỈNH SỬA\n THÔNG TIN SINH VIÊN"
+        android:text="CHỈNH SỬA\n ĐIỂM SINH VIÊN"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold" />
