--- a/app/src/main/res/layout/activity_themdiemthi.xml
+++ b/app/src/main/res/layout/activity_themdiemthi.xml
@@ -58,6 +58,7 @@
         android:id="@+id/editTextDiem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="number"
         android:hint="Điểm"/>
 
     <Button
