--- a/app/src/main/res/layout/list_item_diemdanh.xml
+++ b/app/src/main/res/layout/list_item_diemdanh.xml
@@ -12,18 +12,17 @@
 
         <CheckBox
             android:id="@+id/checkbox_diemdanh"
-            android:layout_width="wrap_content"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
             android:layout_weight="1" />
 
         <TextView
             android:id="@+id/textView_diemdanh_tensv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Nguyễn Văn B" />
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+        android:gravity="center"
+        android:text="Nguyễn Văn B" />
 
         <androidx.cardview.widget.CardView
             android:layout_width="150dp"
