--- a/app/src/main/res/layout/diemdanh.xml
+++ b/app/src/main/res/layout/diemdanh.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/backgroud_2xanh"
+
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -18,14 +20,13 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="138dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/imageView"
                     android:layout_width="117dp"
-                    android:layout_height="match_parent"
-                    app:srcCompat="?android:attr/textSelectHandleRight" />
+                    android:layout_height="match_parent" />
 
                 <LinearLayout
                     android:layout_width="291dp"
@@ -37,10 +38,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="73dp"
                         android:gravity="bottom|right"
-                        android:paddingRight="10dp"
+                        android:paddingRight="30dp"
                         android:text="ĐIỂM DANH"
                         android:textColor="#000000"
-                        android:textSize="34sp" />
+                        android:textSize="34sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/textView2"
@@ -84,14 +86,15 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="40dp"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/textView3"
                         android:layout_width="68dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="40dp"
+                        android:layout_marginRight="40dp"
                         android:text="Ngày"
                         android:textColor="#000000"
                         android:textSize="20sp" />
